<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.renders.login.SignUpFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phoneSignup"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="92dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:id="@+id/passwordCon"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />
    </LinearLayout>
</FrameLayout>